2020-09-08  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-ems.el (w3m-tab-move-right, w3m-tab-move-left): BUGFIX: moving
	with prefix-arg > 1 was swapping tab positions instead of adjusting all
	tab numbers in between.

2020-09-07  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-next-page-label, w3m-previous-page-label)
	(w3m-scroll-up-or-next-url, w3m-scroll-down-or-previous-url):
	Additional logic to catch 'next' and 'previous' page links not
	identified within an HTML tag.
	(w3m-scroll-interval, w3m-set-scroll-interval): New defcustom to set
	default scroll interval for 'long scrolls'
	(w3m-page-navigation-labels): regexp cons list for identifying labels
	(w3m-scroll-up-or-next-url, w3m-scroll-down-or-previous-url):  Use new
	variable.
	(w3m-scroll-down-or-previous-url, w3m-scroll-up-or-next-url): bugfix:
	when new page no longer uses old label.

2020-08-30  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-hist.el (w3m-history-scrub-optional-elements): Forgot to escape
	quotation marks in docstring.

2020-08-17  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-hist.el (w3m-history-scrub-optional-elements): New option.
	(w3m-history-scrub): Use the new option.

2020-08-17  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-download.el (w3m-download-using-wget): update args for new version of
	`w3m-read-file-name'.

	* w3m-save.el (w3m-save-buffer-directory): Mark variable as deprecated
	in favor of `w3m-default-save-directory'.
	(w3m-save-buffer): Replace deprecated variable, and use function
	`w3m-read-file-name' instead of `read-file-name'. This has the
	consequence of updating a session's default save directory to the most
	recent used save diretory. Update docstring.

	* w3m.el (w3m-read-file-name): Rename and re-order args to be
	consistent with underlying emacs function `read-file-name', and update
	docstring.
	(w3m-goto-ftp-url): update args for new version of
	`w3m-read-file-name'

2020-05-10  Boruch Baum  <boruch_baum@gmx.com>
