@@ -34,10 +34,7 @@
 
 ;;; Code:
 
-(eval-when-compile (require 'cl)) ;; lexical-let
-;; `cl' employs `cl-lib'.
-;; (require 'cl-lib) ;; cl-incf
-
+(require 'cl-lib) ;; cl-decf, cl-incf
 (require 'w3m-util)
 (require 'w3m-proc)
 (require 'w3m-image)
@@ -869,23 +866,24 @@ EVENT is an internal arg for mouse control."
 		     last-command-event))
   (unless mv-amt (setq mv-amt 1))
   (if (> 0 mv-amt)
-    (w3m-tab-move-left (- mv-amt) event)
-   (when (and (/= mv-amt 0) (eq major-mode 'w3m-mode))
-     (let* ((start-buf (current-buffer))
-            (start-num (w3m-buffer-number start-buf))
-            (buffers (w3m-list-buffers))
-            (len     (length buffers))
-            (this-num (1- start-num))
-            this-buf)
-       (setq mv-amt  (min mv-amt (- len start-num)))
-       (setq buffers (last buffers (- len start-num)))
-       (setq buffers (butlast buffers (- (length buffers) mv-amt)))
-       (rename-buffer "*w3m*<0>")
-       (while (setq this-buf (pop buffers))
-         (w3m-buffer-set-number this-buf (incf this-num)))
-       (w3m-buffer-set-number start-buf (+ start-num mv-amt))
-       (w3m-select-buffer-update)
-       (w3m-tab-mouse-track-selected-tab event (+ start-num mv-amt) t)))))
+      (w3m-tab-move-left (- mv-amt) event)
+    (when (and (/= mv-amt 0) (eq major-mode 'w3m-mode))
+      (let* ((start-buf (current-buffer))
+	     (start-num (w3m-buffer-number start-buf))
+	     (buffers (w3m-list-buffers))
+	     (len (length buffers))
+	     (this-num (1- start-num))
+	     this-buf)
+	(setq mv-amt (min mv-amt (- len start-num)))
+	(when (> mv-amt 0)
+	  (setq buffers (last buffers (- len start-num)))
+	  (setq buffers (butlast buffers (- (length buffers) mv-amt)))
+	  (rename-buffer "*w3m*<0>")
+	  (while (setq this-buf (pop buffers))
+	    (w3m-buffer-set-number this-buf (cl-incf this-num)))
+	  (w3m-buffer-set-number start-buf (+ start-num mv-amt))
+	  (w3m-select-buffer-update)
+	  (w3m-tab-mouse-track-selected-tab event (+ start-num mv-amt) t))))))
 
 (defalias 'w3m-tab-move-next 'w3m-tab-move-right)
 
@@ -894,26 +892,26 @@ EVENT is an internal arg for mouse control."
 Use the prefix argument to move the tab MV-AMT positions left-ward.
 EVENT is an internal arg for mouse control."
   (interactive (list (prefix-numeric-value current-prefix-arg)
-                     last-command-event))
+		     last-command-event))
   (unless mv-amt (setq mv-amt 1))
   (if (> 0 mv-amt)
-    (w3m-tab-move-right (- mv-amt) event)
-   (when (and (/= mv-amt 0) (eq major-mode 'w3m-mode))
-     (let* ((start-buf (current-buffer))
-            (start-num (w3m-buffer-number start-buf))
-            (buffers (nreverse (w3m-list-buffers)))
-            (len     (length buffers))
-            (this-num (1+ start-num))
-            this-buf)
-       (setq mv-amt  (min mv-amt start-num))
-       (setq buffers (last buffers (1- start-num)))
-       (setq buffers (butlast buffers (- (length buffers) mv-amt)))
-       (rename-buffer "*w3m*<0>")
-       (while (setq this-buf (pop buffers))
-         (w3m-buffer-set-number this-buf (decf this-num)))
-       (w3m-buffer-set-number start-buf (- start-num mv-amt))
-       (w3m-select-buffer-update)
-       (w3m-tab-mouse-track-selected-tab event (+ start-num mv-amt) t)))))
+      (w3m-tab-move-right (- mv-amt) event)
+    (when (and (/= mv-amt 0) (eq major-mode 'w3m-mode))
+      (let* ((start-buf (current-buffer))
+	     (start-num (w3m-buffer-number start-buf))
+	     (buffers (nreverse (w3m-list-buffers)))
+	     (this-num (1+ start-num))
+	     this-buf)
+	(setq mv-amt (min mv-amt (1- start-num)))
+	(when (> mv-amt 0)
+	  (setq buffers (last buffers (1- start-num)))
+	  (setq buffers (butlast buffers (- (length buffers) mv-amt)))
+	  (rename-buffer "*w3m*<0>")
+	  (while (setq this-buf (pop buffers))
+	    (w3m-buffer-set-number this-buf (cl-decf this-num)))
+	  (w3m-buffer-set-number start-buf (- start-num mv-amt))
+	  (w3m-select-buffer-update)
+	  (w3m-tab-mouse-track-selected-tab event (- start-num mv-amt) t))))))
 
 (defalias 'w3m-tab-move-prior 'w3m-tab-move-left)
 
@@ -928,12 +926,14 @@ EVENT is an internal arg for mouse control."
     (setq w3m-tab-map (make-sparse-keymap))
     (let* ((cur (current-buffer))
 	   (f1 (lambda (fn) `(lambda (e) (interactive "e") (,fn e ,cur))))
-	   (f2 (lambda (fn) `(lambda (e)
-			       (interactive "e")
+	   (f2 (lambda (fn) `(lambda (n e)
+			       (interactive
+				(list (prefix-numeric-value current-prefix-arg)
+				      last-command-event))
 			       (select-window (posn-window (event-start e)))
 			       (switch-to-buffer ,cur)
 			       (setq this-command ',fn)
-			       (,fn 1 e))))
+			       (,fn n e))))
 	   (drag-action (funcall f1 'w3m-tab-drag-mouse-function))
 	   (single-action (funcall f1 'w3m-tab-click-mouse-function))
 	   (double-action1 (funcall f1 'w3m-tab-double-click-mouse1-function))
