@@ -1,8 +1,14 @@
-2020-09-08  Boruch Baum  <boruch_baum@gmx.com>
+2020-09-09  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m-ems.el (w3m-tab-move-right, w3m-tab-move-left):
+	Do nothing if no room to move for given prefix argument.
+	(w3m-tab-make-keymap): Pass prefix arg to w3m-tab-move-right/left.
+
+2020-09-09  Boruch Baum  <boruch_baum@gmx.com>
 
 	* w3m-ems.el (w3m-tab-move-right, w3m-tab-move-left): BUGFIX: moving
 	with prefix-arg > 1 was swapping tab positions instead of adjusting all
-	tab numbers in between.
+	tab numbers in between (PR#82).
 
 2020-09-07  Boruch Baum  <boruch_baum@gmx.com>
 
